[tool.poetry]
name = "graphviewersaas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
streamlit = "^1.37.0"
openpyxl = "^3.1.5"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
